[package]
name = "ticketcoin-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketcoin_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
mpl-token-metadata = { version="~1.4.0", features = [ "no-entrypoint" ] }
anchor-spl = "0.26.0"
serde_with = "~1.14.0"
